--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
-ENV_MONGODB_URI=mongodb+srv://Worachot1125:PeZHuHmWaGr8yyyc@cluster0.ivwdzuz.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+ENV_MONGODB_URI=mongodb+srv://<name><password>:@cluster0.ivwdzuz.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=change_me
 JWT_EXPIRES=7d
